// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component snapshots rating 0 (initial) should match snapshot 1`] = `
<scale-rating-stars>
  <mock:shadow-root>
    <div aria-label="0 out of 5 stars" class="rating" id="rating" role="img" tabindex="0">
      <span class="rating__symbols">
        <span class="rating__symbol__wrapper">
          <span class="rating__symbol" id="star-1" role="presentation" style="width: 24px;">
            <scale-icon-action-favorite color="var(--scl-color-grey-5000, #7c7c7c)"></scale-icon-action-favorite>
          </span>
        </span>
        <span class="rating__symbol__wrapper">
          <span class="rating__symbol" id="star-2" role="presentation" style="width: 24px;">
            <scale-icon-action-favorite color="var(--scl-color-grey-5000, #7c7c7c)"></scale-icon-action-favorite>
          </span>
        </span>
        <span class="rating__symbol__wrapper">
          <span class="rating__symbol" id="star-3" role="presentation" style="width: 24px;">
            <scale-icon-action-favorite color="var(--scl-color-grey-5000, #7c7c7c)"></scale-icon-action-favorite>
          </span>
        </span>
        <span class="rating__symbol__wrapper">
          <span class="rating__symbol" id="star-4" role="presentation" style="width: 24px;">
            <scale-icon-action-favorite color="var(--scl-color-grey-5000, #7c7c7c)"></scale-icon-action-favorite>
          </span>
        </span>
        <span class="rating__symbol__wrapper">
          <span class="rating__symbol" id="star-5" role="presentation" style="width: 24px;">
            <scale-icon-action-favorite color="var(--scl-color-grey-5000, #7c7c7c)"></scale-icon-action-favorite>
          </span>
        </span>
      </span>
      <span class="rating__symbols rating__symbols--indicator">
        <span class="rating__symbol" style="width: 24px; clip-path: inset(0 100% 0 0);">
          <scale-icon-action-favorite color="var(--scl-color-primary)" selected=""></scale-icon-action-favorite>
        </span>
        <span class="rating__symbol" style="width: 24px; clip-path: inset(0 200% 0 0);">
          <scale-icon-action-favorite color="var(--scl-color-primary)" selected=""></scale-icon-action-favorite>
        </span>
        <span class="rating__symbol" style="width: 24px; clip-path: inset(0 300% 0 0);">
          <scale-icon-action-favorite color="var(--scl-color-primary)" selected=""></scale-icon-action-favorite>
        </span>
        <span class="rating__symbol" style="width: 24px; clip-path: inset(0 400% 0 0);">
          <scale-icon-action-favorite color="var(--scl-color-primary)" selected=""></scale-icon-action-favorite>
        </span>
        <span class="rating__symbol" style="width: 24px; clip-path: inset(0 500% 0 0);">
          <scale-icon-action-favorite color="var(--scl-color-primary)" selected=""></scale-icon-action-favorite>
        </span>
      </span>
    </div>
  </mock:shadow-root>
</scale-rating-stars>
`;

exports[`component snapshots rating 3 should match snapshot 1`] = `
<scale-rating-stars rating="3">
  <mock:shadow-root>
    <div aria-label="3 out of 5 stars" class="rating" id="rating" role="img" tabindex="0">
      <span class="rating__symbols">
        <span class="rating__symbol__wrapper">
          <span class="rating__symbol" id="star-1" role="presentation" style="width: 24px; clip-path: inset(0 300% 0 0);">
            <scale-icon-action-favorite color="var(--scl-color-grey-5000, #7c7c7c)"></scale-icon-action-favorite>
          </span>
        </span>
        <span class="rating__symbol__wrapper">
          <span class="rating__symbol" id="star-2" role="presentation" style="width: 24px; clip-path: inset(0 200% 0 0);">
            <scale-icon-action-favorite color="var(--scl-color-grey-5000, #7c7c7c)"></scale-icon-action-favorite>
          </span>
        </span>
        <span class="rating__symbol__wrapper">
          <span class="rating__symbol" id="star-3" role="presentation" style="width: 24px; clip-path: inset(0 100% 0 0);">
            <scale-icon-action-favorite color="var(--scl-color-grey-5000, #7c7c7c)"></scale-icon-action-favorite>
          </span>
        </span>
        <span class="rating__symbol__wrapper">
          <span class="rating__symbol" id="star-4" role="presentation" style="width: 24px;">
            <scale-icon-action-favorite color="var(--scl-color-grey-5000, #7c7c7c)"></scale-icon-action-favorite>
          </span>
        </span>
        <span class="rating__symbol__wrapper">
          <span class="rating__symbol" id="star-5" role="presentation" style="width: 24px;">
            <scale-icon-action-favorite color="var(--scl-color-grey-5000, #7c7c7c)"></scale-icon-action-favorite>
          </span>
        </span>
      </span>
      <span class="rating__symbols rating__symbols--indicator">
        <span class="rating__symbol" style="width: 24px;">
          <scale-icon-action-favorite color="var(--scl-color-primary)" selected=""></scale-icon-action-favorite>
        </span>
        <span class="rating__symbol" style="width: 24px;">
          <scale-icon-action-favorite color="var(--scl-color-primary)" selected=""></scale-icon-action-favorite>
        </span>
        <span class="rating__symbol" style="width: 24px; clip-path: inset(0 0% 0 0);">
          <scale-icon-action-favorite color="var(--scl-color-primary)" selected=""></scale-icon-action-favorite>
        </span>
        <span class="rating__symbol" style="width: 24px; clip-path: inset(0 100% 0 0);">
          <scale-icon-action-favorite color="var(--scl-color-primary)" selected=""></scale-icon-action-favorite>
        </span>
        <span class="rating__symbol" style="width: 24px; clip-path: inset(0 200% 0 0);">
          <scale-icon-action-favorite color="var(--scl-color-primary)" selected=""></scale-icon-action-favorite>
        </span>
      </span>
    </div>
  </mock:shadow-root>
</scale-rating-stars>
`;
